Content updates for UR testing and skip links added

--- a/app/views/appellant-submission/v15/listed-building/appeal-site/site-address.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-site/site-address.html
@@ -45,7 +45,7 @@
             id: "appealsub-"+version+"-appealsite-address-line-1",
             name: "appealsub-"+version+"-appealsite-address-line-1",
             label: {
-              html: 'Building and street <span class="govuk-visually-hidden">line 1 of 2</span>'
+              text: 'Address line 1'
             },
             value: data["appealsub-"+version+"-appealsite-address-line-1"]
           }) }}
@@ -54,7 +54,7 @@
             id: "appealsub-"+version+"-appealsite-address-line-2",
             name: "appealsub-"+version+"-appealsite-address-line-2",
             label: {
-              html: '<span class="govuk-visually-hidden">Building and street line 2 of 2</span>'
+              text: 'Address line 2 (optional)'
             },
             value: data["appealsub-"+version+"-appealsite-address-line-2"]
           }) }}
