--- a/app/views/appellant-submission/v15/save-return/email/return-email.html
+++ b/app/views/appellant-submission/v15/save-return/email/return-email.html
@@ -27,23 +27,17 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
   <div class="govuk-grid-column-two-thirds">
 
     <p class="govuk-body">
-      Dear [name],
-    </p>
-
-    <p class="govuk-body">
-      <!-- This link will expire after 6 weeks. -->
       You have until 3 April 2022 to submit your appeal.
     </p>
 
     <h2 class="govuk-heading-m">
-      How to get back to your appeal
+      How to continue with your appeal
     </h2>
 
     <ol class="govuk-list govuk-list--number">
       <li>
         Go to the link to receive a code: <a href="../input-code" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue?app=hgdsuyts6t16f</a>
       </li>
-
       <li>
         Enter the code we send in an email to you.
       </li>
