Fix to routing and added skip links

--- a/app/views/appellant-submission/v15/listed-building/task-list.html
+++ b/app/views/appellant-submission/v15/listed-building/task-list.html
@@ -94,7 +94,7 @@
           </li>
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              {% if data["appealsub-v14-bys-whatareyouappealing"] == "Removal or variation of conditions" %}
+              {% if data["appealsub-"+version+"-bys-whatareyouappealing"] == "Removal or variation of conditions" %}
                 <a href="planning-application-documents/original-decision">Upload documents from your planning application</a>
               {% else %}
                 <a href="planning-application-documents/application-upload">Upload documents from your planning application</a>
