--- a/app/views/index.html
+++ b/app/views/index.html
@@ -303,7 +303,7 @@ service-start{% extends "layout.html" %}
                   </h4>
                   <ul class="govuk-list govuk-list--bullet">
                     <li>
-                      <a href="/appellant-submission/v15/guidance/submit-an-appeal">Start from 'Submit an appeal' guidance (to retrun to the service)</a>
+                      <a href="/appellant-submission/v15/guidance/submit-an-appeal">Start from 'Submit an appeal' guidance (to return to the service)</a>
                     </li>
                     <li>
                       <a href="/appellant-submission/v15/before-you-start/">Start from 'Before you start'</a>
@@ -314,6 +314,10 @@ service-start{% extends "layout.html" %}
                     <li>
                       <a href="/appellant-submission/v15/skip/tasklist-lb-refused">Start from 'Task list' to appeal a refused listed building consent</a>
                     </li>
+                    <li>
+                      <a href="/appellant-submission/v15/skip/tasklist-variation-lb-nondetermination">Start from 'Task list' to appeal non-determination of removal or variation of conditions on listed building consent</a>
+                    </li>
+                    
                     <!--li>
                       Starting from check your answers in 'Before you start':</a>
                       <ul class="govuk-list govuk-list--bullet">
