--- a/app/views/index.html
+++ b/app/views/index.html
@@ -292,8 +292,8 @@ service-start{% extends "layout.html" %}
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds"><div class="govuk-inset-text govuk-!-margin-top-0">
                   {{ govukTag({
-                    classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                    text: "WIP"
+                    classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                    text: "Ready for UR"
                   }) }}
                   <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                     Version 15 - Listed building consent appeal submission
