--- a/app/views/appellant-submission/v15/save-return/email/confirmation-email.html
+++ b/app/views/appellant-submission/v15/save-return/email/confirmation-email.html
@@ -12,6 +12,10 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 {% block content %}
 <!-- faux email header -->
 <section>
+  {{ govukTag({
+    classes: "govuk-tag--black govuk-!-margin-bottom-7",
+    text: "ALL A11"
+  }) }}
   <p>
     <strong>Subject:</strong> Confirm your email address
   </p>
@@ -52,4 +56,5 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
   </div>
 </div>
+
 {% endblock %}
