--- a/app/views/appellant-submission/v15/save-return/email/return-email.html
+++ b/app/views/appellant-submission/v15/save-return/email/return-email.html
@@ -10,6 +10,10 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 {% block content %}
 <!-- faux email header -->
 <section>
+  {{ govukTag({
+    classes: "govuk-tag--black govuk-!-margin-bottom-7",
+    text: "ALL A12"
+  }) }}
     <p>
     <strong>Subject:</strong> Continue with your appeal for application {{ data["savereturn-v15-applicationnumber"] or '1234567'}}
   </p>
