--- a/app/views/appellant-submission/v15/listed-building/check-your-answers.html
+++ b/app/views/appellant-submission/v15/listed-building/check-your-answers.html
@@ -569,7 +569,7 @@
 -->
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Did the proposed development change after you submitted your application?
+              Is the description of development on your application form still correct?
             </dt>
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">{{ data["appealsub-"+version+"-applicationdocs-developmentchanged"] }}</p>
@@ -579,7 +579,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="javascript:preventDefault();">
-                Change<span class="govuk-visually-hidden"> did the proposed development change after you submitted your application</span>
+                Change<span class="govuk-visually-hidden"> the description of development</span>
               </a>
             </dd>
           </div>
