--- a/app/views/appellant-submission/v15/save-return/continue-appeal.html
+++ b/app/views/appellant-submission/v15/save-return/continue-appeal.html
@@ -26,7 +26,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="confirm-email" method="post">
+      <form action="" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
 
@@ -64,7 +64,7 @@
         </div>
 
         {{ govukButton({
-          href: "input-code",
+          href: "input-code?savereturn-v15-showbacklink=true",
           text: "Continue"
         }) }}
 
