Save progress fixes to OGv3

--- a/app/views/save-progress/v3/appeal-saved-email.html
+++ b/app/views/save-progress/v3/appeal-saved-email.html
@@ -46,7 +46,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p>
 
     <p class="govuk-body">
-      You have until 3 April 2022 to submit your appeal.
+      You have until {{ 24 | daysInFuture }} to submit your appeal.
     </p>
 
     <p class="govuk-body">
