--- a/app/views/save-progress/v3/appeal-saved.html
+++ b/app/views/save-progress/v3/appeal-saved.html
@@ -41,7 +41,7 @@
       </p>
 
       <div class="govuk-inset-text">
-        You have until 3 April 2022 to submit your appeal.
+        You have until {{ 24 | daysInFuture }} to submit your appeal.
       </div>
 
       <!-- <p class="govuk-body">
