--- a/app/views/save-progress/v3/return-email.html
+++ b/app/views/save-progress/v3/return-email.html
@@ -32,7 +32,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
     <p class="govuk-body">
       <!-- This link will expire after 6 weeks. -->
-      You have until 3 April 2022 to submit your appeal.
+      You have until {{ 24 | daysInFuture }} to submit your appeal.
     </p>
 
     <h2 class="govuk-heading-m">
