--- a/app/views/appellant-submission/v15/save-return/code-expired.html
+++ b/app/views/appellant-submission/v15/save-return/code-expired.html
@@ -1,7 +1,7 @@
-{% set pageref = "SAR-010-AS15" %}
+{% set pageref = "SAR-011-AS15" %}
 {% extends "layouts/appellant-submission/v15.html" %}
 
-{% set title = "Request a new code" %}
+{% set title = "Code expired" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -12,12 +12,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
 {% endblock %}
@@ -25,7 +20,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
 
     <span class="govuk-caption-l">{{ subServiceName }}</span>
 
@@ -36,13 +31,14 @@
       </label>
 
       <p class="govuk-body">
-        Emails sometimes take a few minutes to arrive. If you do not receive the code, you can request a new one.
+        The code you're trying to enter has expired.
       </p>
 
-      {{ govukButton({
-        href: "input-code",
-        text: "Request a new code"
-      }) }}
+      <p class="govuk-body">
+        <a href="input-code" class="govuk-link">
+          Send another code
+        </a>
+      </p>
 
     </div>
 
