--- a/app/views/appellant-submission/v15/save-return/enter-appeal-details.html
+++ b/app/views/appellant-submission/v15/save-return/enter-appeal-details.html
@@ -21,7 +21,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="input-code" method="post">
+      <form action="" method="post">
 
         <div class="govuk-form-group">
 
@@ -63,6 +63,7 @@
         </div>
 
         {{ govukButton({
+          href: "input-code",
           text: "Continue"
         }) }}
 
